--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="button_color">#FF5584AC</color>
+    <color name="background_gray">#FF252525</color>
+    <color name="text_background_gray">#FF504B4B</color>
 </resources>
