--- a/app/src/main/res/layout/activity_add_item.xml
+++ b/app/src/main/res/layout/activity_add_item.xml
@@ -19,21 +19,30 @@
         android:layout_width="0dp"
         android:layout_height="0dp"/>
 
+    <TextView
+        android:layout_marginTop="10dp"
+        app:layout_constraintEnd_toEndOf="@+id/img_my_image"
+        android:textDirection="rtl"
+        android:textColor="@color/white"
+        android:id="@+id/txt_retake"
+        app:layout_constraintTop_toBottomOf="@+id/img_my_image"
+        android:text="retake photo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
     <LinearLayout
+        android:layout_marginTop="20dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/img_my_image"
+        app:layout_constraintTop_toTopOf="@+id/txt_retake"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="20dp"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent="0.65"
         android:layout_height="wrap_content">
 
-        <TextView
-            text
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+
 
         <TextView
             android:text="Name"
