--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="button_color">#FF5584AC</color>
     <color name="background_gray">#FF252525</color>
     <color name="text_background_gray">#FF504B4B</color>
+    <color name="washed_white">#90FFFFFF</color>
 </resources>
