--- a/app/src/main/res/layout/activity_add_item.xml
+++ b/app/src/main/res/layout/activity_add_item.xml
@@ -9,13 +9,14 @@
     tools:context=".ActivityAddItem">
 
     <ImageView
+        android:layout_marginTop="20dp"
         android:id="@+id/img_my_image"
         android:src="@drawable/snapchat"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintWidth_percent="0.65"
+        app:layout_constraintWidth_percent="0.8"
         android:layout_width="0dp"
         android:layout_height="0dp"/>
 
@@ -23,7 +24,6 @@
         android:layout_marginTop="10dp"
         app:layout_constraintEnd_toEndOf="@+id/img_my_image"
         android:textDirection="rtl"
-        android:textColor="@color/white"
         android:id="@+id/txt_retake"
         app:layout_constraintTop_toBottomOf="@+id/img_my_image"
         android:text="retake photo"
@@ -33,46 +33,47 @@
     <LinearLayout
         android:layout_marginTop="20dp"
         android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/img_my_image"
+        app:layout_constraintStart_toStartOf="@id/img_my_image"
         app:layout_constraintTop_toTopOf="@+id/txt_retake"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="20dp"
         android:layout_width="0dp"
-        app:layout_constraintWidth_percent="0.65"
         android:layout_height="wrap_content">
-
-
 
         <TextView
             android:text="Name"
-            android:textColor="@color/white"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
         <EditText
+            android:inputType="text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Name of the item"/>
 
         <TextView
             android:text="location"
-            android:textColor="@color/white"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
         <EditText
+            android:inputType="text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Location of the item"/>
 
         <TextView
             android:text="Description"
-            android:textColor="@color/white"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
         <EditText
+            android:padding="5dp"
+            android:gravity="top"
+            android:minLines="7"
+            android:maxLines="7"
+            android:background="@color/text_background_gray"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Location of the item" />
