--- a/app/src/main/res/layout/activity_add_item.xml
+++ b/app/src/main/res/layout/activity_add_item.xml
@@ -8,20 +8,54 @@
     android:background="@color/background_gray"
     tools:context=".ActivityAddItem">
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:paddingTop="@dimen/spacing_small"
+        android:paddingHorizontal="@dimen/spacing_large"
+        android:id="@+id/top_bar"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:text="cancel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <ImageView
+            app:layout_constraintDimensionRatio="1:1"
+            android:src="@drawable/m"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintWidth_percent="0.12"
+            android:layout_width="0dp"
+            android:layout_height="0dp"/>
+
+        <TextView
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:text="save"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
     <ImageView
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="@dimen/spacing_large"
         android:id="@+id/img_my_image"
         android:src="@drawable/snapchat"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/top_bar"
         app:layout_constraintWidth_percent="0.8"
         android:layout_width="0dp"
         android:layout_height="0dp"/>
 
     <TextView
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="@dimen/spacing_medium"
         app:layout_constraintEnd_toEndOf="@+id/img_my_image"
         android:textDirection="rtl"
         android:id="@+id/txt_retake"
@@ -31,13 +65,13 @@
         android:layout_height="wrap_content"/>
 
     <LinearLayout
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="@dimen/spacing_large"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="@id/img_my_image"
         app:layout_constraintStart_toStartOf="@id/img_my_image"
         app:layout_constraintTop_toTopOf="@+id/txt_retake"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="@dimen/spacing_large"
         android:layout_width="0dp"
         android:layout_height="wrap_content">
 
@@ -53,6 +87,7 @@
             android:hint="Name of the item"/>
 
         <TextView
+            android:layout_marginTop="@dimen/spacing_medium"
             android:text="location"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
@@ -64,15 +99,16 @@
             android:hint="Location of the item"/>
 
         <TextView
+            android:layout_marginTop="@dimen/spacing_medium"
             android:text="Description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
         <EditText
-            android:padding="5dp"
+            android:padding="@dimen/spacing_small"
             android:gravity="top"
-            android:minLines="7"
-            android:maxLines="7"
+            android:minLines="@integer/text_field_lines"
+            android:maxLines="@integer/text_field_lines"
             android:background="@color/text_background_gray"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
