--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,8 +25,10 @@
 
 
         <Button
+            app:iconGravity="textStart"
             android:id="@+id/btn_new_item"
             android:text="new item"
+            app:icon="@drawable/ic_baseline_add_24"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginVertical="10dp"/>
@@ -34,6 +36,7 @@
         <Button
             android:id="@+id/btn_my_item"
             android:text="My Items"
+            app:icon="@drawable/ic_baseline_format_list_bulleted_24"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginVertical="10dp"/>
@@ -41,6 +44,7 @@
         <Button
             android:id="@+id/btn_settings"
             android:text="Settings"
+            app:icon="@drawable/ic_baseline_settings_24"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginVertical="10dp"/>
