Changes by eirik design

--- a/app/src/main/res/layout/activity_add_item.xml
+++ b/app/src/main/res/layout/activity_add_item.xml
@@ -43,6 +43,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ImageView
+        android:scaleType="fitXY"
         android:layout_marginTop="@dimen/spacing_large"
         android:id="@+id/img_my_image"
         android:src="@drawable/snapchat"
