--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,6 +35,7 @@
             android:layout_marginVertical="10dp"/>
 
         <Button
+            app:iconGravity="textStart"
             android:id="@+id/btn_my_item"
             android:text="My Items"
             app:icon="@drawable/ic_baseline_format_list_bulleted_24"
