--- a/app/src/main/res/layout/my_item.xml
+++ b/app/src/main/res/layout/my_item.xml
@@ -17,6 +17,7 @@
         android:layout_height="wrap_content"/>
 
     <ImageView
+        android:id="@+id/mini_image"
         android:layout_margin="2dp"
         android:layout_marginEnd="@dimen/spacing_small"
         app:layout_constraintDimensionRatio="1:1"
