--- a/app/src/main/res/layout/my_item.xml
+++ b/app/src/main/res/layout/my_item.xml
@@ -1,25 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/button_color"
-    android:layout_marginHorizontal="@dimen/spacing_medium"
-    android:layout_marginVertical="@dimen/spacing_small"
     android:layout_width="match_parent"
-    android:layout_height="50dp">
+    android:layout_height="200px"
+    android:maxHeight="200px"
+    android:minHeight="200px">
 
-    <TextView
-        android:id="@+id/txt_name"
-        android:text="My item Numero 1"
-        android:padding="@dimen/spacing_medium"
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_marginRight="200px"
+        android:padding="20px"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/txt_name"
+            android:textSize="50px"
+            android:maxLines="1"
+            android:fontFamily="sans-serif"
+            android:textStyle="bold"
+            android:text="My item Numero 1"
+            android:ellipsize="end"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:id="@+id/txt_desc"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Desc"
+            android:textSize="40px"
+            android:maxLines="1"
+            android:ellipsize="end"
+            android:textStyle="italic"
+            android:fontFamily="sans-serif"/>
+
+    </LinearLayout>
+
 
     <ImageView
+        android:layout_margin="20px"
         android:id="@+id/mini_image"
-        android:layout_margin="2dp"
         android:layout_marginEnd="@dimen/spacing_small"
         app:layout_constraintDimensionRatio="1:1"
         android:src="@drawable/snapchat"
@@ -27,5 +53,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_width="0dp"
         android:layout_height="match_parent"/>
+
+    <View
+        android:layout_marginHorizontal="20px"
+        android:background="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="4px"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
