--- a/app/src/main/res/layout/activity_view_item.xml
+++ b/app/src/main/res/layout/activity_view_item.xml
@@ -1,10 +1,110 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background_gray"
     tools:context=".ActivityViewItem">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:paddingTop="@dimen/spacing_small"
+        android:paddingHorizontal="@dimen/spacing_large"
+        android:id="@+id/top_bar"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/txt_back"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:text="back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:id="@+id/txt_name"
+            android:maxLines="1"
+            android:gravity="center"
+
+            android:autoSizeTextType="uniform"
+            android:autoSizeMaxTextSize="30dp"
+            android:autoSizeMinTextSize="15dp"
+
+            android:textAlignment="center"
+            android:layout_marginHorizontal="100dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:text="Item name"
+            android:fontFamily="sans-serif"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <ScrollView
+        app:layout_constraintTop_toBottomOf="@id/top_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:scaleType="fitXY"
+                android:layout_marginTop="@dimen/spacing_large"
+                android:id="@+id/img_my_image"
+                android:src="@drawable/snapchat"
+                app:layout_constraintDimensionRatio="1:1"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintWidth_percent="0.8"
+                android:layout_width="0dp"
+                android:layout_height="0dp"/>
+
+            <HorizontalScrollView
+                app:layout_constraintStart_toEndOf="@+id/img_my_image"
+                app:layout_constraintStart_toStartOf="@id/img_my_image"
+                app:layout_constraintTop_toBottomOf="@+id/img_my_image"
+                app:layout_constraintEnd_toEndOf="@id/img_my_image"
+                app:layout_constraintHorizontal_bias="0"
+                android:layout_width="320dp"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/txt_location"
+                    android:scrollHorizontally="true"
+                    android:maxLines="1"
+                    android:drawableLeft="@drawable/ic_baseline_location_on_24"
+                    android:text="my location"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+            </HorizontalScrollView>
+
+            <TextView
+                android:id="@+id/txt_desc"
+                android:layout_margin="40dp"
+                app:layout_constraintTop_toBottomOf="@id/img_my_image"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </ScrollView>
+
+            <Button
+                android:id="@+id/btn_edit"
+                android:text="edit item"
+                android:layout_margin="20dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
