--- a/app/src/main/res/layout/activity_my_items.xml
+++ b/app/src/main/res/layout/activity_my_items.xml
@@ -46,8 +46,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+        <!-- TODO: remove padding -->
         <LinearLayout
             android:id="@+id/layout_scroll"
+            android:paddingBottom="50dp"
             android:orientation="vertical"
             android:background="@color/text_background_gray"
             android:layout_width="match_parent"
