--- a/app/src/main/res/layout/activity_add_item.xml
+++ b/app/src/main/res/layout/activity_add_item.xml
@@ -17,6 +17,7 @@
         android:layout_height="wrap_content">
 
         <TextView
+            android:id="@+id/txt_cancel"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:text="cancel"
