--- a/app/src/main/res/layout/activity_my_grid.xml
+++ b/app/src/main/res/layout/activity_my_grid.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".ActivityMyGrid">
 
+    <!-- height: 100dp -->
     <include layout="@layout/item_list_nav_bar"/>
 
     <GridView
