--- a/app/src/main/res/layout/activity_view_item.xml
+++ b/app/src/main/res/layout/activity_view_item.xml
@@ -59,7 +59,7 @@
                 android:scaleType="fitXY"
                 android:layout_marginTop="@dimen/spacing_large"
                 android:id="@+id/img_my_image"
-                android:src="@drawable/snapchat"
+                android:src="@drawable/ic_baseline_image_24"
                 app:layout_constraintDimensionRatio="1:1"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -98,13 +98,35 @@
 
     </ScrollView>
 
-            <Button
-                android:id="@+id/btn_edit"
-                android:text="edit item"
-                android:layout_margin="20dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+    <!-- Hidden when there is no receipt -->
+    <TextView
+        android:visibility="gone"
+        android:id="@+id/txt_receipt_label"
+        app:layout_constraintBottom_toTopOf="@id/img_my_receipt"
+        app:layout_constraintStart_toStartOf="@id/img_my_receipt"
+        android:text="see receipt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <!-- Hidden when there is no receipt -->
+    <ImageView
+        android:visibility="gone"
+        android:id="@+id/img_my_receipt"
+        android:src="@drawable/ic_baseline_image_24"
+        android:layout_marginBottom="10dp"
+        android:layout_marginStart="30dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_width="300px"
+        android:layout_height="300px"/>
+
+    <Button
+        android:id="@+id/btn_edit"
+        android:text="edit item"
+        android:layout_margin="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
