--- a/app/src/main/res/layout/item_list_nav_bar.xml
+++ b/app/src/main/res/layout/item_list_nav_bar.xml
@@ -2,29 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="50dp"
     android:background="@color/background_gray"
     android:id="@+id/layout_list_nav_bar"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <TextView
-        android:id="@+id/txt_cancel"
-        android:text="back"
-        android:layout_marginStart="20dp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/txt_header"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
-    <TextView
-        android:id="@+id/txt_header"
-        android:text="My items"
-        android:textSize="24dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
 
     <TextView
         android:id="@+id/txt_list"
@@ -54,5 +35,11 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
+    <View
+        android:layout_marginHorizontal="20px"
+        android:background="@color/text_background_gray"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="4px"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
