--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.MemoruTest1" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.MemoruTest1" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/button_color</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -11,6 +11,10 @@
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+
+        <!-- Action Bar styling -->
+        <item name="android:background">@color/background_gray</item>
+        
         <!-- Customize your theme here. -->
 
         <!-- styler bla. teksten i inputs -->
