--- a/app/src/main/res/layout/activity_my_items.xml
+++ b/app/src/main/res/layout/activity_my_items.xml
@@ -26,35 +26,9 @@
             android:id="@+id/layout_scroll"
             android:paddingBottom="50dp"
             android:orientation="vertical"
-            android:background="@color/text_background_gray"
+            android:background="@color/background_gray"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-
-            <!--
-            <include layout="@layout/my_item"/>
-            <include layout="@layout/my_item"/>
-            <include layout="@layout/my_item"/>
-            <include layout="@layout/my_item"/>
-            <include layout="@layout/my_item"/>
-            <include layout="@layout/my_item"/>
-            <include layout="@layout/my_item"/>
-            <include layout="@layout/my_item"/>
-            <include layout="@layout/my_item"/>
-            <include layout="@layout/my_item"/>
-            <include layout="@layout/my_item"/>
-            <include layout="@layout/my_item"/>
-            <include layout="@layout/my_item"/>
-            <include layout="@layout/my_item"/>
-            <include layout="@layout/my_item"/>
-            <include layout="@layout/my_item"/>
-            <include layout="@layout/my_item"/>
-            <include layout="@layout/my_item"/>
-            <include layout="@layout/my_item"/>
-            <include layout="@layout/my_item"/>
-            <include layout="@layout/my_item"/>
-            <include layout="@layout/my_item"/>
-            <include layout="@layout/my_item"/>
-            -->
         </LinearLayout>
     </ScrollView>
 
