--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="background_gray_thin">#44252525</color>
     <color name="text_background_gray">#FF504B4B</color>
     <color name="washed_white">#90FFFFFF</color>
+    <color name="desc_color">#BEBEBE</color>
 </resources>
