--- a/app/src/main/res/layout/my_item_fav.xml
+++ b/app/src/main/res/layout/my_item_fav.xml
@@ -30,16 +30,17 @@
             android:layout_height="wrap_content"/>
 
         <TextView
-            android:id="@+id/txt_desc"
+            android:id="@+id/txt_location"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Desc"
+            android:text="Location"
             android:textSize="40px"
             android:maxLines="1"
             android:ellipsize="end"
             android:textStyle="italic"
             android:fontFamily="sans-serif"
-            android:textColor="@color/desc_color"/>
+            android:textColor="@color/desc_color"
+            android:drawableLeft="@drawable/ic_baseline_location_on_small"/>
 
     </LinearLayout>
 
