--- a/app/src/main/res/layout/activity_view_item.xml
+++ b/app/src/main/res/layout/activity_view_item.xml
@@ -10,9 +10,10 @@
     tools:context=".ActivityViewItem">
 
     <ScrollView
+        android:layout_marginBottom="400px"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -32,6 +33,7 @@
                 android:layout_height="0dp"/>
 
             <HorizontalScrollView
+                android:id="@+id/scroll_location"
                 app:layout_constraintStart_toEndOf="@+id/img_my_image"
                 app:layout_constraintStart_toStartOf="@id/img_my_image"
                 app:layout_constraintTop_toBottomOf="@+id/img_my_image"
@@ -52,9 +54,17 @@
             </HorizontalScrollView>
 
             <TextView
+                android:layout_marginHorizontal="40dp"
+                android:id="@+id/txt_desc_label"
+                app:layout_constraintTop_toBottomOf="@id/scroll_location"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Description"/>
+
+            <TextView
                 android:id="@+id/txt_desc"
-                android:layout_margin="40dp"
-                app:layout_constraintTop_toBottomOf="@id/img_my_image"
+                android:layout_marginHorizontal="40dp"
+                app:layout_constraintTop_toBottomOf="@id/txt_desc_label"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
