--- a/app/src/main/res/layout/activity_view_item.xml
+++ b/app/src/main/res/layout/activity_view_item.xml
@@ -54,6 +54,7 @@
             </HorizontalScrollView>
 
             <TextView
+                android:layout_marginTop="20dp"
                 android:layout_marginHorizontal="40dp"
                 android:id="@+id/txt_desc_label"
                 app:layout_constraintTop_toBottomOf="@id/scroll_location"
@@ -62,6 +63,8 @@
                 android:text="Description"/>
 
             <TextView
+                android:layout_marginTop="10dp"
+                android:background="@color/text_background_gray"
                 android:id="@+id/txt_desc"
                 android:layout_marginHorizontal="40dp"
                 app:layout_constraintTop_toBottomOf="@id/txt_desc_label"
