--- a/app/src/main/res/layout/activity_view_item.xml
+++ b/app/src/main/res/layout/activity_view_item.xml
@@ -97,11 +97,20 @@
         android:layout_height="300px"/>
 
     <Button
-        android:id="@+id/btn_edit"
-        android:text="edit item"
+        android:theme="@style/del_button"
+        android:text="delete item"
+        android:layout_height="wrap_content"
         android:layout_margin="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_width="wrap_content"
+        android:id="@+id/btn_delete"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <Button
+        android:id="@+id/btn_edit"
+        android:text="  edit  item  "
+        app:layout_constraintStart_toStartOf="@id/btn_delete"
+        app:layout_constraintBottom_toTopOf="@id/btn_delete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
