--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="text_background_gray">#FF504B4B</color>
     <color name="washed_white">#90FFFFFF</color>
     <color name="desc_color">#BEBEBE</color>
+    <color name="delete_red">#FF904040</color>
 </resources>
