--- a/app/src/main/res/layout/activity_view_item.xml
+++ b/app/src/main/res/layout/activity_view_item.xml
@@ -66,6 +66,7 @@
                 android:layout_marginTop="10dp"
                 android:background="@color/text_background_gray"
                 android:id="@+id/txt_desc"
+                android:minLines="7"
                 android:layout_marginHorizontal="40dp"
                 app:layout_constraintTop_toBottomOf="@id/txt_desc_label"
                 android:layout_width="match_parent"
